--- a/Drip/Layout/MainLayout.razor.css
+++ b/Drip/Layout/MainLayout.razor.css
@@ -173,6 +173,7 @@
     text-decoration: none;
     font-size: var(--font-size-sm);
     transition: all var(--transition-normal);
+    border-left: 3px solid transparent;
 }
 
 .nav-link:hover {
@@ -186,7 +187,6 @@
     font-weight: var(--font-weight-medium);
     border-left: 3px solid var(--accent-info);
     text-decoration: none !important;
-    padding-left: calc(var(--spacing-sm) + 3px);
 }
 
 .nav-link.active:hover {
