fix navigation links

--- a/Drip/Layout/MainLayout.razor
+++ b/Drip/Layout/MainLayout.razor
@@ -7,7 +7,7 @@
     <header class="top-bar">
         <div class="top-bar-content">
             <div class="logo">
-                <NavLink href="/" class="logo-link">
+                <NavLink href="" class="logo-link">
                     <svg class="logo-raindrop" width="20" height="20" viewBox="0 0 20 20" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
                       <path d="M10 2C10 2 4 9 4 13a6 6 0 0 0 12 0c0-4-6-11-6-11z" fill="#3fa7f4" stroke="none"/>
                       <path d="M10 2C10 2 4 9 4 13a6 6 0 0 0 12 0c0-4-6-11-6-11z" />
@@ -36,7 +36,7 @@
         <aside class="sidebar">
             <nav class="sidebar-nav">
                 <div class="nav-item">
-                    <NavLink Match="NavLinkMatch.All" href="/" class="nav-link">
+                    <NavLink Match="NavLinkMatch.All" href="" class="nav-link">
                         <span class="nav-link-text">Home</span>
                     </NavLink>
                 </div>
