--- a/Drip/Pages/Home.razor
+++ b/Drip/Pages/Home.razor
@@ -1,6 +1,6 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>drip</PageTitle>
 
 <div class="home-container">
     <div class="hero-section">
