--- a/Drip/Pages/Operation.razor
+++ b/Drip/Pages/Operation.razor
@@ -12,6 +12,8 @@
 }
 else
 {
+    <PageTitle>@OpenApiOperation.Summary | drip</PageTitle>
+    
     <div class="operation-detail">
         <div class="operation-header">
             <div class="operation-meta">
